Audio and framerate settings (#523)
* Audio and framerate settings
- Enable audio AES filter
- Now can choose more audio in/out bitrate
  Please note the constraints:
   * Filtering AES, NS is available with in bitrate under or egal 16000
   * When select OPUS out birate is 48000
   * When select PCM or PCMU in bitrate shall be egal to out bitrate

- Can now control video FPS
     * I noticed that some configuration freeze the video (for example 1/1)

* Delete webrtc_profile.ini

* Update status.cgi

* Update rtspserver.conf.dist

--- a/firmware_mod/config/rtspserver.conf.dist
+++ b/firmware_mod/config/rtspserver.conf.dist
@@ -22,12 +22,19 @@ RTSPMJPEGOPTS=""
 
 # Video
 BITRATE=5000
+# Framerate
+FRAMERATE_DEN=1
+FRAMERATE_NUM=25
 
 # AudioFormat
 # Can be: OPUS | MP3 | PCM | PCMU
 AUDIOFORMAT=MP3
+# Audio sampling rate
+AUDIOINBR=16000
+# Audio streaming sampling rate
 AUDIOOUTBR=44100
 HWVOLUME=70
 SWVOLUME=-1
 FILTER=4
 HIGHPASSFILTER=ON
+AECFILTER=ON
