--- a/firmware_mod/config/rtspserver.conf.dist
+++ b/firmware_mod/config/rtspserver.conf.dist
@@ -6,6 +6,8 @@
 # Configure RTSP Servers
 # Use /system/sdcard/bin/v4l2rtspserver-master -h to see available options
 
+PORT=8554
+
 # H264 RTSP server options
 # Examples:
 # RTSPH264OPTS="-W960 -H540"
